RecipeItem position fixed (align top)

--- a/src/views/RecipeList/RecipeItem/RecipeItem.scss
+++ b/src/views/RecipeList/RecipeItem/RecipeItem.scss
@@ -71,7 +71,6 @@
 
 .recipe {
   display: flex;
-  align-items: center;
   padding: 2px 0;
   > :first-child {
     padding-right: 4px;
